<?xml version="1.0"?>
<package format="3">
  <name>wbc_util</name>
  <version>0.0.1</version>
  <description>Utility functions for whole-body control.</description>
  <maintainer email="dk@todo.todo">dk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>yaml-cpp</depend>
  <depend>wbc_formulation</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
